updated Booking junit test